added a store mapper due to the conntinuos rework on the whole architecture